--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "test": "jest",
-    "start":"parcel index_React.html"
+    "start":"parcel index.html"
   },
   "repository": {
     "type": "git",
