--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.10.3",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.5"
